Fix resized images defaulting to centered instead of left-aligned
Added explicit left alignment (margin-left: 0; margin-right: auto) for
resized images without alignment classes.

Also excluded resized images from the full-width img rule since they
should respect their explicit width percentage, not be forced to 100%.

Files changed:
- static/css/ckeditor_custom.css

--- a/static/css/ckeditor_custom.css
+++ b/static/css/ckeditor_custom.css
@@ -80,8 +80,14 @@
     margin: 1em 0;
 }
 
-/* Full width only for non-aligned images */
-.ck-content figure.image:not(.image-style-align-left):not(.image-style-align-right):not(.image-style-side) img {
+/* Resized images default to left alignment */
+.ck-content figure.image.image_resized:not(.image-style-align-left):not(.image-style-align-right):not(.image-style-align-center):not(.image-style-side) {
+    margin-left: 0;
+    margin-right: auto;
+}
+
+/* Full width only for non-aligned, non-resized images */
+.ck-content figure.image:not(.image-style-align-left):not(.image-style-align-right):not(.image-style-side):not(.image_resized) img {
     width: 100%;
 }
 
